Fixing spacing within div tags

--- a/src/tictactoe/tic-tac-toe.css
+++ b/src/tictactoe/tic-tac-toe.css
@@ -1,49 +1,51 @@
 body {
-  font: 20px "Century Gothic", Futura, sans-serif;
+  font: 25px "Century Gothic", Futura, sans-serif;
 }
 
-ol, ul {
-  padding-left: 30px;
+.tictactoe {
+ display: flex;
+ align-items:center;
+ justify-content: center;
+ }
+
+.game {
+ width: 100%;
+ height: 100%;
+ display:flex;
+ align-items:center;
+ justify-content: center;
 }
 
 .space {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  }
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
 
-.board {
+.space h1 {
+ margin-top: 5px;
+}
 
-}	
-.row:after {
-  clear: both;
-  content: "";
-  display: table;
+.scores { 
+  margin-bottom: 20px;
 }
 
 .turn {
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 .square {
-  border: 1px solid #999;
+  border: 1px solid black;
+  background-color: #CBEAFB;
   float: left;
-  font-size: 24px;
+  font-size: 45px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 74px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
-}
-
-.square:focus {
-  outline: none;
-}
-
-.game {
-  display: flex;
-  flex-direction: row;
+  width: 74px;
 }
